--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "hekmatinasser/verta": "^1.10",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "0.5.*"
+
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
